Store export columns in db
* add exportable columns to users for selected and orders

* respond format csv and excel, user save preferences

* add method to user model, save preferences for columns to export

* add save preferences in user model for columns

* add params for columns preferences

* fix error on reassign @customer

* add params columns preferences for index

* keep old behaviour

* add default to jsonb data

* fix error on display columns

* fix error on columns to keep

* delete totally LocalStorage for keeping info on columns

* delete localStorage for additional stops and format

* use update method and add format and additional stop

* fix columns with split |

* renaming method avec params for saving export preferences

* renaming method avec params for saving export preferences

* renaming variables and change key called keep -> export

* change method naming

* change params name

* change naming in migration

* dump structure

* update changelog

* fix behaviour to respect tests

* update test for saving preferences

* rename keys

* rename method preferences_params -> export_params, renaming keys

* consistency with params naming

* consistency with params naming

* Apply suggestions from code review

* Apply suggestions from code review

---------

Co-authored-by: Gwénaël Rault <rgwenael@gmail.com>

--- a/app/views/plannings/_edit.html.haml
+++ b/app/views/plannings/_edit.html.haml
@@ -250,6 +250,7 @@
   large_plannning = @planning.routes.select{ |route| !route.hidden || !route.locked || route.vehicle_usage_id.nil? }.any?{ |r| (stops_count += r.stops_size) >= 1000 }
 
   controller.js(
+    export_settings: current_user.export_settings,
     manage_planning: @manage_planning,
     with_stops: !large_plannning,
     prefered_unit: current_user.prefered_unit,
