--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -309,7 +309,7 @@
       </div>
     </div>
 
-    <%= f.number_field :optimization_stop_soft_upper_bound, { help: t('.optimization_stop_soft_upper_bound_help'), placeholder: t('.optimization_soft_upper_bound_default', n: LocalizedValues.localize_numeric_value(Planner::Application.config.optimize_stop_soft_upper_bound)), min: 0, step: 'any', append: '×'} %>
+    <%= f.number_field :optimization_stop_soft_upper_bound, { help: t('.optimization_stop_soft_upper_bound_help'), placeholder: t('.optimization_soft_upper_bound_default', n: LocalizedValues.localize_numeric_value(Planner::Application.config.optimize_stop_soft_upper_bound)), min: 0.1, step: '0.1', append: '×'} %>
     <%= f.number_field :optimization_vehicle_soft_upper_bound, { help: t('.optimization_vehicle_soft_upper_bound_help'), placeholder: t('.optimization_soft_upper_bound_default', n: LocalizedValues.localize_numeric_value(Planner::Application.config.optimize_vehicle_soft_upper_bound)), min: 0.1, step: '0.1', append: '×'} %>
     <%= f.number_field :optimization_cost_waiting_time, { help: t('.optimization_cost_waiting_time_help'), placeholder: t('.optimization_cost_waiting_time_default', n: LocalizedValues.localize_numeric_value(Planner::Application.config.optimize_cost_waiting_time)), min: 0.1, step: '0.1', append: '×'} %>
 
