--- a/app/views/plannings/_form.html.haml
+++ b/app/views/plannings/_form.html.haml
@@ -15,7 +15,7 @@
   - else
     = f.hidden_field :vehicle_usage_set_id, value: @planning.customer.vehicle_usage_sets[0].id
   %div
-    = f.text_field :date, { placeholder: t('.default_date'), value: @planning.date ? l(@planning.date.to_time, format: :datepicker) : nil, input_group: content_tag('i', '', {class: 'fa fa-calendar fa-fw'})}
+    = f.text_field :date, { placeholder: t('plannings.form.default_date'), value: l(@planning.date || (Date.today + @planning.customer.planning_date_offset), format: :datepicker), input_group: content_tag('i', '', {class: 'fa fa-calendar fa-fw'})}
   - if (@planning.id && !@planning.tags.empty?) || !@planning.id
     .col-md-offset-2.col-md-8.field
       %label.control-label{:for => "speed_multiplier"}
