--- a/app/views/index/_dashboard.html.haml
+++ b/app/views/index/_dashboard.html.haml
@@ -1,4 +1,28 @@
 - if current_user && !current_user.admin?
+  - if @customer.reseller.contact_url && @customer_summary[:plannings][:carbon_dioxyde_average]
+    .row
+      .col-md-offset-3.col-lg-offset-4.col-xs-12.col-md-6.col-lg-4.my-4
+        .card.card-shadow
+          .card-body.pv-1
+            %h3.card-title.fw-bold.d-flex.flex-wrap.justify-content-between
+              %span
+                %i.fa.fa-flask.fa-fw
+                = t 'activerecord.attributes.reseller.carbon_dioxyde_average'
+            %p.card-text= t 'index.carbon_dioxyde_average'
+            .row.d-flex.justify-content-center
+              .col-xs-4
+                .route-info{ class: @customer_summary[:plannings][:carbon_dioxyde_color_class] }
+                  %i.fa.fa-flask.fa-fw>
+                  = "#{@customer_summary[:plannings][:carbon_dioxyde_average].round(3)} #{t('all.unit.kgco2e_delivery_html')}"
+            %p.card-text{class: "text-#{@customer_summary[:reseller][:carbon_dioxyde_color_class]}"}= t 'index.carbon_dioxyde_average_reseller', n: @customer_summary[:reseller][:carbon_dioxyde_average].round(3)
+            %p.help-block.pull-right= t 'index.carbon_dioxyde_average_reseller_help'
+
+          .card-footer.text-center
+            = t('index.carbon_dioxyde_average_discussion')
+            = link_to @customer_summary[:reseller][:contact_url], target: '_blank', class: 'btn btn-primary' do
+              %i.fa.fa-fw.fa-envelope
+              = t 'index.carbon_dioxyde_average_discussion_button'
+
   .row.d-flex.flex-wrap
     .col-xs-12.col-md-6.col-lg-4.my-4
       .card.card-shadow.card-height-uniform
