--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -311,8 +311,6 @@
       </div>
     </div>
 
-    <%= f.number_field :optimization_stop_soft_upper_bound, { help: t('.optimization_stop_soft_upper_bound_help'), placeholder: t('.optimization_soft_upper_bound_default', n: LocalizedValues.localize_numeric_value(Planner::Application.config.optimize_stop_soft_upper_bound)), min: 0.1, step: '0.1', append: '×'} %>
-    <%= f.number_field :optimization_vehicle_soft_upper_bound, { help: t('.optimization_vehicle_soft_upper_bound_help'), placeholder: t('.optimization_soft_upper_bound_default', n: LocalizedValues.localize_numeric_value(Planner::Application.config.optimize_vehicle_soft_upper_bound)), min: 0.1, step: '0.1', append: '×'} %>
     <%= f.number_field :optimization_cost_waiting_time, { help: t('.optimization_cost_waiting_time_help'), placeholder: t('.optimization_cost_waiting_time_default', n: LocalizedValues.localize_numeric_value(Planner::Application.config.optimize_cost_waiting_time)), min: 0.1, step: '0.1', append: '×'} %>
 
     <%= render partial: 'shared/check_box', locals: { form: f, field: :optimization_force_start, label: t('activerecord.attributes.customer.optimization_force_start'), help: t('.optimization_force_start_help') } %>
@@ -320,8 +318,8 @@
 
   <%= render partial: 'shared/check_box', locals: { form: f, field: :enable_optimization_soft_upper_bound, label: t('activerecord.attributes.customer.enable_optimization_soft_upper_bound'), help: t('.enable_optimization_soft_upper_bound_help') } %>
   <div class="<%= @customer.enable_optimization_soft_upper_bound ? "" : "d-none" %>" id="optimization_soft_upper_bound">
-    <%= f.text_field :stop_max_upper_bound, {help: t('.stop_max_upper_bound_help'), placeholder: t('all.unit.hour_minute'), value: @customer.stop_max_upper_bound_time, append: content_tag('i', '', class: 'fa fa-stopwatch fa-fw')} %>
-    <%= f.text_field :vehicle_max_upper_bound, { help: t(".vehicle_max_upper_bound"), placeholder: t('all.unit.hour_minute'), value: @customer.vehicle_max_upper_bound_time, append: content_tag('i', '', class: 'fa fa-repeat fa-fw')} %>
+    <%= f.text_field :stop_max_upper_bound, {help: t('.stop_max_upper_bound_help'), placeholder: t('all.unit.hour_minute'), value: @customer.stop_max_upper_bound_time || 0, append: content_tag('i', '', class: 'fa fa-stopwatch fa-fw')} %>
+    <%= f.text_field :vehicle_max_upper_bound, { help: t(".vehicle_max_upper_bound"), placeholder: t('all.unit.hour_minute'), value: @customer.vehicle_max_upper_bound_time || 0, append: content_tag('i', '', class: 'fa fa-repeat fa-fw')} %>
   </div>
 
   <legend class="scheduler-border col-md-8">
