Add duration by destination

--- a/app/templates/stops/_show.mustache
+++ b/app/templates/stops/_show.mustache
@@ -113,6 +113,7 @@
   {{#time}}<li><i class="fa fa-stopwatch fa-fw"></i> {{#i18n}}plannings.edit.popup.time{{/i18n}} {{time}}{{#time_day}}&nbsp;(+{{time_day}}){{/time_day}}</li>{{/time}}
   {{#wait_time}}<li><i class="fa fa-stopwatch fa-fw"></i> {{#i18n}}plannings.edit.wait{{/i18n}} {{wait_time}}</li>{{/wait_time}}
   {{#duration}}<li><i class="fa fa-stopwatch fa-fw"></i> {{#i18n}}plannings.edit.popup.duration{{/i18n}} {{duration}}</li>{{/duration}}
+  {{#destination_duration}}<li><i class="fa fa-stopwatch fa-fw"></i> {{#i18n}}plannings.edit.popup.destination_duration{{/i18n}} {{destination_duration}}</li>{{/destination_duration}}
   {{#priority_text}}<li><i class="fa fa-signal fa-fw"></i> {{#i18n}}plannings.edit.popup.priority{{/i18n}} {{priority_text}}</li>{{/priority_text}}
   {{#revenue}}<li><i class="fa fa-hand-holding-dollar fa-fw"></i> {{#i18n}}plannings.edit.popup.revenue{{/i18n}} {{revenue}} {{prefered_currency}}</li>{{/revenue}}
   {{#quantities}}
